# Stalinium-C2

./: README.md
client/: Cargo.toml  config.toml
client/src/: attacks.rs  commands.rs  communication.rs  config.rs  encryption.rs  errors.rs  main.rs  persistence.rs  utils.rs
server/: Cargo.toml  config.toml
server/src/: attacks.rs  commands.rs  config.rs  main.rs  persistence.rs
server/src/ui/: app.vue  main.rs
