[package]
name = "botnet_server"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
tauri = { version = "1.0", features = ["default", "shell"] }

[features]
default = ["shell"]
